Remove padding to fix text overlap

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -176,7 +176,6 @@ main {
 .water-text, .sleep-text, .activity-text {
   display: inline-block;
   width: 100%;
-  padding: 0 0 0 2%;
   text-align: left;
 }
 
